[project]
name = "kapybara"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints",
    "furo",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kapybara*"]

[project.scripts]
kapybara = "kapybara.cli:main"